style.css
:root {
    --clr-blue: #1992d4;
    --clr-offwhite: #e2e8f0;
    --clr-text-light: rgb(80, 80, 80);
    /* --clr-text-light: red; */
}

body {
    font-family: sans-serif;
    /* height: 100vh; */
    /* overflow: hidden; */
}

button, input {
    font-size: 100%;
    font-family: inherit;
}

*, 
*::before,
*::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

li {
    list-style: none;
}

.container {
    display: grid;
    grid-template-columns: 300px 1fr;
    grid-template-rows: 10rem 1fr; 
    min-height: 100vh;
}


        /* header section start */

.header {
    /* grid-column: 2 / 3; */
    /* grid-row: 1; */
    background-color: aliceblue;
    padding: 1rem 2rem;
    display: inline-grid;
    grid-template-rows: 40% 60%;
    align-items: center;
}

.header .top {
    align-self: start; /* review */
    display: inline-grid;
    grid-template: 1fr / 2fr 1fr ;
}

.search input {
    width: 85%;
    border-radius: 1rem;
    border: none;
    background-color: var(--clr-offwhite);
    padding: 6px 12px;
}

.search input:focus {
    outline: 1px solid gray;
}


.header .user {
    display: inline-grid;
    grid-auto-flow: column;
    align-items: center;
    justify-content: end;
    gap: 1.5rem;
    margin-right: 2.2rem;
}

.user h3 {
    font-size: .9rem;
}

img {
    border-radius: 50%;
}


.header .bottom {
    padding-inline-end: 1rem;
    display: grid;
    grid-template: 1fr / 60% 40%;
}

.welcome {
    justify-self: start;
    display: inline-grid;
    grid-auto-flow: column;
    align-items: end;
    gap: 1.5rem;
}

.profile-name {
    align-self: center;
}

.profile-name p {
    font-weight: bold;
    font-size: .7rem;
    line-height: 1.5;
}

.profile-name h1 {
    font-size: 1.5rem;
    line-height: 1.3;
}

.bottom .buttons {
    align-self: center;
    display: inline-grid;
    grid-auto-flow: column;
    justify-content: end;
    gap: 1rem;
}

button {
    padding: .7rem;
    width: 90px;
    border-radius: 2rem;
    background-color: var(--clr-blue);
    color: #fff;
    border: none;
    font-weight: bold;
}

          /* header section end */


          /* sidebar section start */

.sidebar {
    grid-column: 1;
    grid-row: 1 / 3;
    background-color: var(--clr-blue);
    color: #fff;
    padding: 1rem;
    font-weight: bold;
}

.sidebar .title {
    font-size: 1.7rem;
    display: inline-flex;
    align-items: center;
    gap: 10px;
}

.nav-group {
    margin-block: 2rem;
}

.nav-group ul {
    margin-left: 10px;
}

.nav-group ul li {
    margin-bottom: .6rem;
    display: flex;
    align-items: center;
    gap: .9rem;
    font-size: 1.2rem;
}

        /* sidebar section end */


        /* main content start */

.main {
    grid-column: 2;
    grid-row: 2 ;
    padding: 1rem;
    background-color: var(--clr-offwhite);
    display: inline-grid;
    grid-template-columns: 1fr 250px;
    overflow: auto;
}

.project-container {
    /* min-height: 100%; */
    overflow: auto;
}

.section-title {
    font-size: 1.25rem;
    padding-bottom: 7px;
}

.cards-container {
    display: inline-grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    grid-auto-rows: 200px;
    gap: 1rem;
    /* max-height: 100%; */
    /* overflow-y: auto; */
}

.project-cards {
    background-color: #fff;
    padding: 1.5rem 1rem;
    border-radius: 6px;
    box-shadow: 2px 2px 3px #bbb;
    display: inline-flex;
    flex-direction: column;
    justify-content: space-between;
    border-left: 8px solid orange;
}

.card-text h3 {
    line-height: 1.5;
}

.card-text p {
    color: var(--clr-text-light);
}

.card-action {
    display: inline-grid;
    justify-content: end;
    grid-auto-flow: column;
    gap: 10px;
}

        /* main section end */


        /* aside start */

.aside {
    margin-left: 1rem;
}

.aside-group {
    margin-bottom: 1.3rem;
}

.aside-card {
    background: #fff;
    border-radius: 6px;
    box-shadow: 2px 2px 3px #bbb;
    padding: 1.3rem 1.3rem;
}

.aside-card hr {
    margin-block: 1rem;
}

.aside-card h5 {
    font-weight: light;
}

.aside-card p {
    font-size: 12px;
    color: var(--clr-text-light);
}

.aside-card ul {
    display: inline-flex;
    flex-direction: column;
    gap: 1.16rem;
}

.aside-card ul li {
    display: inline-flex;
    gap: 1rem;
    align-items: center;
}

.aside-card .text {
    line-height: 1.3;
}

        /* aside end */

